--- a/scr/styles.css
+++ b/scr/styles.css
@@ -1,10 +1,23 @@
 .terminal {
     margin: 10px;
     padding: 10px;
-    height: 100%;
-    width: 100%;
+    height: 200px;
+    width: 80%;
     font-family: sans-serif;
     background-color: #333d54;
     border-radius: 10px;
+    color: white;
+    justify-content:space-around;
+}
+
+.terminal-content{
+    height: 180px;
+    overflow:auto hidden;
+}
+
+.user_input{
+    background-color: transparent;
+    border: transparent;
+    outline: none;
     color: white;
 }
