--- a/scr/styles.css
+++ b/scr/styles.css
@@ -1,8 +1,7 @@
 .terminal {
-    margin: 10px;
+    margin: 5% 20% 20% 20%;
+    height: 75%;
     padding: 10px;
-    height: 200px;
-    width: 80%;
     font-family: sans-serif;
     background-color: #333d54;
     border-radius: 10px;
@@ -11,8 +10,9 @@
 }
 
 .terminal-content{
-    height: 180px;
+    height: 100%;
     overflow:auto hidden;
+    font-size: 20px;
 }
 
 .user_input{
@@ -20,4 +20,84 @@
     border: transparent;
     outline: none;
     color: white;
+    font-size: 20px;
+    opacity: 50%;
+}
+
+.command{
+    color: white;
+    font-size: 20px;
+    opacity: 50%;
+}
+
+html {
+    min-height: 100%;
+    background-image: url(../scr/images/index_background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+body{
+    height: 100vh;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+}
+
+.close {
+    background-color: #f96256;
+    border: 1px solid #f65549;
+    height: 10px;
+    width: 10px;
+    margin: 5px;
+    border-radius: 50%;
+    margin-left: 0px;
+}
+
+.max {
+    background-color: #33c948;
+    border: 1px solid #2dbb41;
+    height: 10px;
+    width: 10px;
+    margin: 5px;
+    border-radius: 50%;
+}
+
+.min {
+    background-color: #fdbc3d;
+    border: 1px solid #ffb524;
+    height: 10px;
+    width: 10px;
+    margin: 5px;
+    border-radius: 50%;
+}
+
+.terminal-bar{
+    width: 100%;
+    height: 25px;
+}
+
+.terminal-bar-text{
+    margin-top: 3px;
+    margin-bottom: 1px;
+    margin-left: 5px;
+}
+
+.output{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.command-keyword{
+    color: red;
 }
