--- a/scr/styles.css
+++ b/scr/styles.css
@@ -15,7 +15,7 @@
     font-size: 20px;
 }
 
-terminal-content::-webkit-scrollbar {
+.terminal-content::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
 }
 
@@ -105,4 +105,10 @@ body{
 
 .command-keyword{
     color: red;
+}
+
+.footer{
+    color:white;
+    font-size: 30px;
+    text-align: space-around;
 }
